--- a/css2/component/banner.css
+++ b/css2/component/banner.css
@@ -1,5 +1,5 @@
 .banner{
-	background-image: linear-gradient(-225deg, rgba(0,0,0,0.8) 0%, rgba(0,0,0,0.1) 80%), url(../../images/elgouna.jpg);
+	background-image: linear-gradient(-225deg, rgba(0,0,0,0.8) 0%, rgba(0,0,0,0.1) 80%), url(../../allimages/elgouna.jpg);
 	color: white;
 	padding: 150px 0px;
 	background-size: cover;
@@ -16,3 +16,4 @@
 	opacity: 0.8;
 	margin-bottom: 40px;
 }
+
